# limud

./: README.md  config.py  mypy.ini  pyproject.toml  render.py  requirements.txt  run  run.sh  test_app.py  vocabulary.db.sqlite3  words.py
limud/: __init__.py  app.py  commands.py  context_processors.py  database.py  extensions.py  factory.py  models.py  render.py  routes.py  schema.sql  words.py
limud/backend/: wiktionary.py
limud/backend/flashcards/: __init__.py  formatting.py  state.py
limud/backend/models/: conjugation.py  vocabulary.py
limud/routes/: __init__.py  conjugation.py  edit.py  flashcards.py  home.py  wotm.py
limud/routes/vocabulary/: __init__.py  _blueprint.py  edit.py  practice.py  review.py
limud/static/: colors.css  dropdown.css  editform.css  fonts.css  hoverbutton.css  style.css
limud/static/styles/: colors.css  conjugation.css  dropdown.css  editform.css  flashcard.css  fonts.css  style.css
limud/templates/: edit.html  flashcard.html  flashcards.html  index.html  layout.html  practice.html  review.html  table.html  welcome.html  wotm.html
migrations/versions/: 88e08d532d7e_.py
